# hrp2_apc

./: .gitattributes  CMakeLists.txt  README.md  README.rst  package.xml  rosinstall
config/: bin_lower_shelf.yaml  bin_upper_shelf.yaml  kiva_pod_interactive_marker.yaml  live_20160927_label_12.yaml  live_20160927_label_16.yaml  live_20160927_label_2.yaml
euslisp/: apc-controller.l  hrp2-apc.l
euslisp/libs/: util.l
euslisp/models/: kiva-pod-convex.l  kiva-pod-cubes.l  kiva-pod.l
launch/: fcn_object_segmentation.launch  hrp2_apc_setup.launch  hrp2_recog_checkerboard.launch  hrp2_record.launch  hrp2_rosbag_apc_look_around.launch  hrp2_rosbag_label_octomap.launch  hrp2_rosbag_live_20160727.launch  hrp2_rosbag_live_20160727_eval.launch  object_segmentation_3d.launch  setup.launch
log_data/: live_20160927_eval_label_12.csv  live_20160927_eval_label_12.eps  live_20160927_eval_label_12_v2.csv  live_20160927_eval_label_16.csv  live_20160927_eval_label_16.eps  live_20160927_eval_label_16_v2.csv  live_20160927_eval_label_2.csv  live_20160927_eval_label_2.eps  live_20160927_eval_label_2_v2.csv
node_scripts/: evaluate_voxel_segmentation  label_names_overlay.py  target_bin_overlay.py
rvizconfig/: hrp2_apc.rviz  hrp2_apc_label_octomap.rviz  hrp2_apc_live_20160727.rviz  hrp2_apc_live_20160727_eval.rviz  hrp2_rosbag_apc_look_around.rviz
sample/: sample_object_segmentation_2d.launch
scripts/: install_raw_data.py  plot_csv_live_20160927_eval.py
