<package>
  <name>hrp2_apc</name>
  <version>0.0.1</version>

  <description>
    3D object segmentation for shelf bin picking by humanoid with deep learning and occupancy voxel grid map.
  </description>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>

  <license>MIT</license>
  <url>http://github.com/wkentaro/hrp2_apc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hrpsys_ros_bridge_tutorials</run_depend>
  <run_depend>jsk_2015_05_baxter_apc</run_depend>
  <run_depend>jsk_apc2016_common</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>jsk_perception</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>resized_image_transport</run_depend>

</package>
